# ParvaOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  rust-toolchain  x86_64-parva_os.json
.cargo/: config.toml
doc/: Commands.md  ParvaFS.md
parva_os/: Cargo.toml
parva_os/src/: allocator.rs  ata.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  process.rs  serial.rs  thread_manager.rs  time.rs  vga.rs
parva_os/src/parva_fs/: ParvaFS.rs  block.rs  block_device.rs  dir.rs  file.rs  mod.rs  super_block.rs
parva_os/src/window_manager/: mod.rs  wm.rs
parva_os/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
parvaos/: Cargo.toml
parvaos/src/: main.rs
