[package]
name = "parva_os"
version = "0.0.1"
authors = ["Francesco Giannice <giannice.developer@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "GPL-3.0-only"

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.15"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 